--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
+run {
+    workingDir = new File(project.rootDir, "run").getAbsoluteFile()
+}
+
 wrapper {
     gradleVersion = "6.0"
     distributionType = Wrapper.DistributionType.ALL
